[BL-51] Added a API : '/' (POST)
object detection

--- a/kubernetes/config.yaml.template
+++ b/kubernetes/config.yaml.template
@@ -33,4 +33,7 @@ spec:
         ports:
         - containerPort: 8080
           name: http-server
+        env:
+        - name: AWS_ACCESS_KEY
+          value: ""
 
